# pulp-service

./: .CLAUDE.md  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  RDS_TESTS_REMOTE_TRIGGER_GUIDE.md  README.md  build_deploy.sh  pr_check.sh  pulp-smash.json  rds-proxy-disconnection-test-plan.md  renovate.json  unit_test.sh
.alcove/agents/: akamai-report.yml  alertmanager-analyzer.yml  claude-md-updater.yml  credential-tester.yml  debug-env.yml  doc-runner.yml  execution-orchestrator.yml  konflux-release-monitor.yml  patcher.yml  plan-reviewer.yml  planner-v2.yml  planner.yml  planning.yml  pulp-developer.yml  reviewer-django.yml  reviewer-go.yml  reviewer-pulp.yml  reviewer-security.yml  reviewer.yml  sdlc-developer.yml  splunk-analyzer.yml  stage-health-checker.yml  task-elaborator.yml  triage.yml  upgrade-deps.yml  validation-reporter.yml  verifier.yml
.alcove/repo-groups/: pulp-stack.yml
.alcove/security-profiles/: docs-reporter.yml  docs-validator.yml  pulp-service-contributor.yml  pulp-service-developer.yml  pulp-service-planner.yml  pulp-service-reader.yml  pulp-service-reviewer.yml
.alcove/tasks/: alertmanager-analyzer.yml  debug-env.yml  reviewer.yml  sdlc-developer.yml  sdlc-security-reviewer.yml  splunk-analyzer.yml  upgrade-deps.yml
.alcove/workflows/: akamai-report-pipeline.yml  alertmanager-analysis-pipeline.yml  execution-orchestrator.yml  milestone-planner.yml  onboarding-validator.yml  planner.yml  post-merge-release-pipeline.yml  sdlc-pipeline-v2.yml  sdlc-pipeline.yml  sdlc-planned.yml  splunk-analysis-pipeline.yml  task-elaborator.yml  upgrade-deps-pipeline.yml
.github/workflows/: build-agent-akamai-report.yml  build-agent-alertmanager.yml  build-agent-splunk.yml  build-dev-container.yml  functional-tests.yml  ruff-sensors.yml
.tekton/: pulp-deploy-and-test.yaml  pulp-functional-tests.yaml  pulp-pull-request.yaml  pulp-push.yaml  pulp-service-pull-request.yaml  pulp-service-push.yaml
CHANGES/: 1959.bugfix  decommission-ocistorage.removal  lightwell-feature-guard-latency.bugfix  lightwell-network-feature-guard.bugfix  lightwell-readonly-group.feature
deploy/: clowdapp.yaml  pulp-otel-collector.yaml
deploy/dashboards/: grafana-dashboard-aipcc-metrics.configmap.yaml  grafana-dashboard-business.configmap.yaml  grafana-dashboard-pulp.configmap.yaml  grafana-dashboard-trusted-libraries.configmap.yaml  pulp-otel-collector.yaml
dev-container/: Dockerfile  entrypoint.sh  settings.py  supervisord.conf
dev-container/scripts/: pulp-add-patch  pulp-remove-patch  pulp-restart  (+1 more)
docs/: ARCHITECTURE.md  malware-scanning.md  plan-format-design.md  pypi-yank-monitor.md
management_tools/: Dockerfile  README.md  configure-yank-monitors.py  gnuplot-script  repair-python-metadata.py  tasks-cli.py  verify-python-metadata.py
management_tools/pulp-access-logs-exporter/: README.md  pyproject.toml
management_tools/pulp-access-logs-exporter/src/pulp_access_logs_exporter/: __init__.py  __main__.py  cli.py  cloudwatch.py  content_cloudwatch.py  content_parser.py  content_schemas.py  logging_config.py  writer.py
management_tools/pulp-access-logs-exporter/tests/: __init__.py  conftest.py  test_cloudwatch_truncation.py  test_content_export.py  test_export.py
pulp_service/: .bumpversion.cfg  CONTRIBUTING.rst  README.md  pyproject.toml  requirements.txt  setup.py  template_config.yml  test_requirements.txt
pulp_service/docs/: index.rst  installation.rst
pulp_service/docs/workflows/: index.rst  publish.rst  sync.rst  upload.rst
pulp_service/pulp_service/: __init__.py
pulp_service/pulp_service/app/: __init__.py  admin.py  authentication.py  authorization.py  constants.py  content.py  exceptions.py  features_service.py  middleware.py  models.py  serializers.py  settings.py  signals.py  storage.py  test_snyk.py  urls.py  util.py  viewsets.py
pulp_service/pulp_service/app/migrations/: 0001_initial.py  0002_add_user_and_group_to_domainorg.py  0002_alter_domainorg_unique_together_domainorg_user_and_more.py  0003_alter_domainorg_domain.py  0003_alter_domainorg_user.py  0004_alter_domainorg_domain.py  0005_featurecontentguard.py  0006_artifactvulnerability.py  0006_vulnerabilityreport.py  0007_alter_vulnerabilityreport_options_and_more.py  0007_ansiblelogreport.py  0008_ansiblelogreport.py  0008_domainorg_domains_alter_domainorg_domain.py  0009_copy_domain_to_domains.py  0010_alter_domainorg_domain_alter_domainorg_domains_and_more.py  0011_alter_domainorg_domain.py  0012_remove_domainorg_domain.py  0013_domainorg_group.py  0013_domainorg_group_alter_domainorg_user.py  0014_yankedpackagereport.py  0015_agentscanreport.py  0016_pypiyanksmonitor.py  0017_alter_pypiyankmonitor_pulp_id_and_more.py
pulp_service/pulp_service/app/tasks/: ansible_log_parser.py  domain_metrics.py  lightwell_period_sync.py  package_scan.py  pypi_yank_check.py  rds_connection_tests.py  redis_lock_utils.py  stale_lock_cleanup.py  testing.py  util.py
pulp_service/pulp_service/management/commands/: triage_urls.py
pulp_service/pulp_service/tasking/: new_worker.py
pulp_service/pulp_service/tests/functional/: __init__.py  conftest.py  constants.py  test_attestation_verification.py  test_authentication.py  test_content_guard_permission.py  test_content_handler.py  test_domain_based_permissions.py  test_domain_org_model.py  test_dummyfail.py  test_feature_service.py  test_group_based_permissions.py  test_lightwell_content_listing_permission.py  test_lightwell_feature_permission.py  test_lightwell_readonly_group_permission.py  test_pypi_yank_check.py  test_task_debug.py  test_vulnerability_report.py  utils.py
pulp_service/pulp_service/tests/functional/api/: __init__.py  test_crud_content_unit.py  test_crud_remotes.py  test_download_content.py  test_download_policies.py  test_eus_contentguard.py  test_publish.py  test_sync.py
pulp_service/pulp_service/tests/unit/: test_content_org_id_middleware.py  test_create_domain_view.py  test_domain_based_permission.py  test_feature_content_guard.py  test_serializers.py
scripts/: ruff-diff-check.sh
(+238 files in other folders)
